# amman-python-401d09

./: .gitignore
class-01/: README.md
class-01/demo/: .gitignore  game.py  importer.py  topics.py
class-01/lab/: README.md
class-02/demo/: requirements.txt
class-03/demo/CodeReview/: pyproject.toml
class-03/demo/CodeReview/codereview/: insert_shift_array.py
class-03/demo/CodeReview/tests/: test_codereview.py
class-04/demo/: pet.js  pet.py  terms.md
class-04/lab/: README.md
class-06/: DISCUSSION.md  README.md
class-06/demo/: compare.py  counter.py  list_comb.py  randomizer.py  test_random.py
class-06/lab/: README.md
class-07/: DISCUSSION.md  README.md
class-07/code review/: Whiteboard-example.md  counter.py
class-07/lab/: README.md
class-07/warm-up/: warm-up.md
class-08/: DISCUSSION.md  README.md
class-08/demo/: game.py
class-08/lab/: README.md
class-08/warm-up/: warm-up.md
class-09/: DISCUSSION.md  README.md
class-09/Code Review/: zip_list.py
class-09/lab/: README.md
class-09/version_3/: hot_dice.sim.txt
class-09/warm-up/: warm-up.md  warmup.py
class-11/demo/: demo.md
class-11/lab/: README.md
class-12/demo/: demo.md
class-12/warm_up/: warm_up.py
class-13/code_challenge_review/: code_challenge.py
class-13/demo/: demo.md
class-13/warm_up/: warm_up.py
class-14/code_review/: bracket_validation.py
class-14/demo/: demo.md
class-16/Code_Review/: Tree.py
class-16/demo/: .gitignore
class-30/: README.md
class-35/: README.md
django-blog/: README.md
portfolio-project-backend/: README.md
(+199 files in other folders)
