[tool.poetry]
name = "CodeReview"
version = "0.1.0"
description = ""
authors = ["RaniaAbdullahh <raniaabdullah6600@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.3.0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
